# scrfd-deepsort-rust

./: Cargo.toml  README.md
src/: main.rs
src/deep/: feature_extractor.rs  mod.rs  model.rs
src/deep_sort/: deep_sort.rs  mod.rs
src/scrfd/: face_detect.rs  mod.rs  scrfd.rs
src/sort/: detection.rs  iou_matching.rs  kalman_filter.rs  linear_assignment.rs  mod.rs  nn_matching.rs  preprocessing.rs  track.rs  tracker.rs
src/test/: mod.rs  test01.rs  test02.rs  test03.rs  test04.rs  test06.rs
